# MOCNordic

./: .gitignore  CMakeLists.txt  GetExecutable.py  LICENSE  README.md  prj.conf
.github/workflows/: build.yml
MOCNordic/: CMakeLists.txt
MOCNordic/MOCNordicBLE/: MOCNordicBLEMgr.cpp
MOCNordic/MOCNordicHID/: MOCNordicHIDevice.cpp
MOCNordic/include/MOCNordic/: MOCNordicBLEMgr.h  MOCNordicHIDevice.h  MOCNordicLogger.h  MOCZephyrType.h
src/: main.cpp
